# Aim

./: .gitignore  .pylintrc  FUNDING.yml  Pipfile  README.md  dev-env.fish  pyproject.toml  release.py  setup.backup  setup.py
.github/workflows/: python-package.yml
aim/: aim.py  gccbuildrules.py  gccbuilds.py  msvcbuildrules.py  msvcbuilds.py  schema.py  typedefs.py  utils.py
src/aim/: aim.py  gccbuildrules.py  gccbuilds.py  main.py  msvcbuildrules.py  msvcbuilds.py  osxbuildrules.py  osxbuilds.py  schema.py  toolchain.py  utils.py  version.py
src/aim_build/: gccbuilds.py  main.py  schema.py  version.py
test/: test.py
test/project/app/: main.cpp
test/project/libproject/: add.cpp  add.h  greet.cpp  greet.h
test/project/linux-clang++/: target.toml
test/project/osx-clang++/: target.toml
test/project/windows-clang++/: target.toml
test/project/windows-clang++/exe/: Project
test/project/windows-clang-cl/: target.toml
